--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     纬度: <input id="latitude" type="text" style="width:100px; margin-right:10px;" />
     <input type="button" value="到达" onclick="theLocation()" />
 </div>
+<div id="colorgrid"></div>
 </body>
 </html>
 <script type="text/javascript">
